Использована вложенность селекторов и конкатенация
Вложенность селекторов и оператор конкатенации (&) использованы по назначению - для описания псевдоклассов и псевдоэлементов.

--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,20 @@ body {
   display: none;
 }
 
+/* main-div */
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  /* outline: 2px solid tomato;  */
+}
+
+.section {
+  margin-bottom: 94px;
+}
+
 /* main - section */
 /* h2 */
 .section-title {
@@ -46,15 +60,6 @@ body {
 }
 
 /* logo */
-.container {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
-  /* outline: 2px solid tomato;  */
-}
-
 .logo {
   color: #000000;
   font-family: "Raleway", sans-serif;
@@ -66,6 +71,11 @@ body {
 
 .logo-design {
   color: #2196F3;
+}
+
+.logo-footer {
+  display: inline-block;
+  margin-bottom: 8px;
 }
 
 /* navigation */
@@ -85,6 +95,10 @@ body {
   margin-left: 85px;
 }
 
+.menu-nav .item {
+  position: relative;
+}
+
 .menu-nav .item:not(:last-child) {
   margin-right: 50px;
 }
@@ -101,14 +115,9 @@ body {
   text-decoration: none;
 }
 
-.link-nav:hover,
-.link-nav:focus {
+.menu-nav .link-nav:hover, .menu-nav .link-nav:focus {
   color: #2196F3;
   outline: transparent;
-}
-
-.menu-link {
-  position: relative;
 }
 
 .underline-link::after {
@@ -125,25 +134,8 @@ body {
           transform: scaleX(0);
 }
 
-.underline-link:hover::after {
-  -webkit-transform: scaleX(1);
-          transform: scaleX(1);
-  -webkit-transition-duration: 250ms;
-          transition-duration: 250ms;
-  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.underline-link:focus::after {
-  -webkit-transform: scaleX(1);
-          transform: scaleX(1);
-  -webkit-transition-duration: 250ms;
-          transition-duration: 250ms;
-  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  outline: transparent;
-}
-
+.underline-link:hover::after,
+.underline-link:focus::after,
 .underline-link:active::after {
   -webkit-transform: scaleX(1);
           transform: scaleX(1);
@@ -151,6 +143,7 @@ body {
           transition-duration: 250ms;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  outline: transparent;
 }
 
 /* contact */
@@ -178,12 +171,12 @@ body {
   text-decoration: none;
 }
 
-.link-contact:hover,
-.link-contact:focus {
+.contact-nav .link-contact:hover, .contact-nav .link-contact:focus {
   color: #2196F3;
   outline: transparent;
 }
 
+/* icon-contact */
 .link-contact .icon-contact-mail {
   fill: #757575;
 }
@@ -211,7 +204,7 @@ body {
 }
 
 .link-contact:hover,
-.link-contact:focus .icon-contact-phon {
+.link-contact:focus .icon-contact-mail {
   --color3: #2196F3;
   outline: transparent;
 }
@@ -220,7 +213,7 @@ footer {
   background-color: #2F303A;
 }
 
-/* main footer container */
+/* footer container */
 .footer-flex {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -228,13 +221,8 @@ footer {
 }
 
 /* address container */
-.address-flex {
+.address {
   margin-top: 45px;
-}
-
-.logo-footer {
-  display: inline-block;
-  margin-bottom: 8px;
 }
 
 .address-text {
@@ -269,7 +257,7 @@ footer {
 }
 
 /* social container */
-.social-flex {
+.social {
   -webkit-box-pack: left;
       -ms-flex-pack: left;
           justify-content: left;
@@ -277,7 +265,7 @@ footer {
   margin-left: 68px;
 }
 
-.contact {
+.social-contact {
   display: inline-block;
   margin-bottom: 20px;
   color: #ffffff;
@@ -288,21 +276,21 @@ footer {
   text-transform: uppercase;
 }
 
-.social {
+.social-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.icon-send {
-  height: 24px;
-  width: 24px;
-  margin-left: 10px;
-  margin-right: 10px;
-}
-
 .icon-footer:not(:first-child) {
   margin-left: 10px;
+}
+
+.icon-social {
+  padding: 0;
+  margin: 0;
+  height: 20px;
+  width: 20px;
 }
 
 .social-link-second {
@@ -323,8 +311,7 @@ footer {
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-.social-link-second:hover,
-.social-link-second:focus {
+.social-link-second:hover, .social-link-second:focus {
   background-color: #2196F3;
   outline: transparent;
 }
@@ -341,6 +328,17 @@ footer {
   margin-left: 90px;
 }
 
+.subscribe-contact {
+  display: inline-block;
+  margin-bottom: 20px;
+  color: #ffffff;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+
 .footer-form {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -353,7 +351,7 @@ footer {
           align-items: center;
 }
 
-.footer-input {
+.footer-form-input {
   width: 355px;
   padding: 15px 16px;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -372,6 +370,13 @@ footer {
   color: rgba(255, 255, 255, 0.6);
 }
 
+.icon-send {
+  height: 24px;
+  width: 24px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
 .button-footer {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
@@ -379,9 +384,6 @@ footer {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-}
-
-.button-footer {
   -webkit-box-align: left;
       -ms-flex-align: left;
           align-items: left;
@@ -391,7 +393,6 @@ footer {
   padding-top: 10px;
   padding-left: 30px;
   padding-bottom: 10px;
-  /* padding-right: 30px; */
   border-radius: 4px;
   color: #ffffff;
   background-color: #2196F3;
@@ -405,13 +406,13 @@ footer {
 }
 
 /* copy container */
-.copy-flex {
+.cont-flex {
   padding-top: 18px;
   padding-bottom: 21px;
   border-top: 1px solid rgba(255, 255, 255, 0.1);
 }
 
-.copy {
+.cont-flex-copy {
   margin-bottom: 0;
   color: rgba(255, 255, 255, 0.4);
   font-weight: normal;
@@ -425,6 +426,19 @@ footer {
 .hero {
   margin-bottom: 94px;
   text-align: center;
+}
+
+.hero-background {
+  height: 600px;
+  max-width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url("../images/Header.jpg");
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url("../images/Header.jpg");
+  background-color: #757575;
 }
 
 .hero-title {
@@ -441,7 +455,7 @@ footer {
   text-transform: uppercase;
 }
 
-.button {
+.hero-button {
   display: inline-block;
   /* min-width: 200px; */
   /* margin-bottom: 200px; */
@@ -455,23 +469,6 @@ footer {
   text-decoration: none;
 }
 
-.section {
-  margin-bottom: 94px;
-}
-
-.bg-hero {
-  height: 600px;
-  max-width: 1600px;
-  margin-left: auto;
-  margin-right: auto;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url("../images/Header.jpg");
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url("../images/Header.jpg");
-  background-color: #757575;
-}
-
 .backdrop {
   position: fixed;
   top: 0;
@@ -481,6 +478,16 @@ footer {
   -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background-color: rgba(0, 0, 0, 0.2);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+  -webkit-transform: translate(-50%, -50%) scale(1.1);
+          transform: translate(-50%, -50%) scale(1.1);
 }
 
 .modal {
@@ -501,16 +508,6 @@ footer {
   border-radius: 4px;
 }
 
-.backdrop.is-hidden {
-  opacity: 0;
-  pointer-events: none;
-}
-
-.backdrop.is-hidden .modal {
-  -webkit-transform: translate(-50%, -50%) scale(1.1);
-          transform: translate(-50%, -50%) scale(1.1);
-}
-
 .modal-title {
   margin: 0;
   padding: 40px 40px 30px 40px;
@@ -520,15 +517,6 @@ footer {
   text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
-}
-
-.modal-form {
-  position: relative;
-  margin-left: 40px;
-  margin-bottom: 30px;
-  margin-right: 0;
-  width: 450px;
-  height: 40px;
 }
 
 .modal-close {
@@ -552,12 +540,21 @@ footer {
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
-.icon-close {
+.modal-close-icon {
   fill: #212121;
 }
 
-.modal-close:hover > .icon-close {
+.modal-close:hover > .modal-close-icon {
   --color3: #2196F3;
+}
+
+.modal-form {
+  position: relative;
+  margin-left: 40px;
+  margin-bottom: 30px;
+  margin-right: 0;
+  width: 450px;
+  height: 40px;
 }
 
 .modal-label {
@@ -576,6 +573,15 @@ footer {
   letter-spacing: 0.01em;
 }
 
+.modal-icon {
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-transform: translate(15px, 15px);
+          transform: translate(15px, 15px);
+  fill: #212121;
+}
+
 .modal-fild {
   width: 100%;
   padding: 10px 40px;
@@ -587,15 +593,6 @@ footer {
 .modal-fild:focus {
   border: 1px solid #2196F3;
   border-radius: 4px;
-}
-
-.modal-icon {
-  position: absolute;
-  top: 0;
-  left: 0;
-  -webkit-transform: translate(15px, 15px);
-          transform: translate(15px, 15px);
-  fill: #212121;
 }
 
 .modal-fild:focus ~ .modal-icon {
@@ -621,20 +618,6 @@ textarea {
   margin-bottom: 20px;
 }
 
-.modal-textarea {
-  width: 100%;
-  height: 120px;
-  padding: 12px 15px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  outline: none;
-}
-
-.modal-textarea:focus {
-  border: 1px solid #2196F3;
-  border-radius: 4px;
-}
-
 .textarea-label {
   position: absolute;
   top: 0;
@@ -651,6 +634,20 @@ textarea {
   letter-spacing: 0.01em;
 }
 
+.modal-textarea {
+  width: 100%;
+  height: 120px;
+  padding: 12px 15px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  outline: none;
+}
+
+.modal-textarea:focus {
+  border: 1px solid #2196F3;
+  border-radius: 4px;
+}
+
 .modal-textarea:focus + .textarea-label,
 .modal-textarea:not(:placeholder-shown) + .textarea-label {
   -webkit-transform: translate(15px, -20px);
@@ -665,14 +662,6 @@ textarea {
   appearance: none;
 }
 
-.checkbox:checked + .checkbox-icon {
-  border-color: #2196F3;
-  background-color: #2196F3;
-  background-image: url("../images/check.svg");
-  background-size: contain;
-  background-origin: border-box;
-}
-
 .checkbox-icon {
   display: inline-block;
   margin-right: 9px;
@@ -680,6 +669,14 @@ textarea {
   height: 15px;
   border: 1px solid #212121;
   border-radius: 1px;
+}
+
+.checkbox:checked + .checkbox-icon {
+  border-color: #2196F3;
+  background-color: #2196F3;
+  background-image: url("../images/check.svg");
+  background-size: contain;
+  background-origin: border-box;
 }
 
 .checkbox-label {
@@ -696,7 +693,7 @@ textarea {
   letter-spacing: 0.03em;
 }
 
-.accept {
+.checkbox-accept {
   margin-left: 4px;
   color: #2196F3;
 }
@@ -705,12 +702,12 @@ textarea {
   margin-top: 30px;
   min-width: 200px;
   min-height: 50px;
-  background-color: #2196F3;
   font-weight: bold;
   font-size: 16px;
   line-height: 1.8;
   letter-spacing: 0.06em;
   color: #ffffff;
+  background-color: #2196F3;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
@@ -739,7 +736,7 @@ textarea {
   letter-spacing: 0.03em;
 }
 
-.icon-features {
+.icon {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -753,7 +750,7 @@ textarea {
           justify-content: center;
 }
 
-.icon {
+.icon-features {
   width: 70px;
   height: 70px;
   margin-top: 25px;
@@ -770,7 +767,7 @@ textarea {
   margin-left: 30px;
 }
 
-.product-activity {
+.activity-product {
   position: relative;
 }
 
@@ -805,6 +802,9 @@ textarea {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .command-shadow {
@@ -817,24 +817,23 @@ textarea {
   margin-left: 30px;
 }
 
-.foto-command {
+.command-foto {
   margin-bottom: 30px;
 }
 
-.command-text {
-  margin-bottom: 16px;
-  font-weight: normal;
+.command-name {
+  margin-bottom: 10px;
+  color: #212121;
+  font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
   letter-spacing: 0.03em;
   text-align: center;
 }
 
-/* h3 */
-.title-name {
-  margin-bottom: 10px;
-  color: #212121;
-  font-weight: 500;
+.command-text {
+  margin-bottom: 16px;
+  font-weight: normal;
   font-size: 16px;
   line-height: 1.18;
   letter-spacing: 0.03em;
@@ -851,14 +850,15 @@ textarea {
   margin-right: 32px;
 }
 
-.social-command {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
 .icon-item:not(:first-child) {
   margin-left: 10px;
+}
+
+.icon-social {
+  padding: 0;
+  margin: 0;
+  height: 20px;
+  width: 20px;
 }
 
 .social-link {
@@ -879,19 +879,11 @@ textarea {
   background-color: transparent;
 }
 
-.icon-social {
-  padding: 0;
-  margin: 0;
-  height: 20px;
-  width: 20px;
-}
-
 .social-link .icon-social {
   fill: #AFB1B8;
 }
 
-.social-link:hover,
-.social-link:focus {
+.social-link:hover, .social-link:focus {
   background-color: #2196F3;
   outline: transparent;
 }
@@ -935,8 +927,7 @@ textarea {
   fill: #AFB1B8;
 }
 
-.company-link:hover,
-.company-link:focus {
+.company-link:hover, .company-link:focus {
   border: 1px solid #2196F3;
   border-radius: 4px;
   outline: transparent;
