--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import"./utils/variables";
 @import"./common/common";
+@import"./common/logo";
 @import"./common/page-header";
 @import"./common/page-footer";
 @import"./components/section-hero";
