--- a/sass/components/_portfolio-filter.scss
+++ b/sass/components/_portfolio-filter.scss
@@ -15,12 +15,11 @@ button {
     justify-content: center;
                                         
     margin-bottom: 34px;
-}
-                                        
-.button-filter .item:not(:first-child) {
+
+    & .item:not(:first-child) {
     margin-left: 8px;
-}
-                                        
+} }
+                                 
 .button-first {
     color: $title-color;
     font-weight: 500;
