--- a/sass/components/_portfolio-gallery.scss
+++ b/sass/components/_portfolio-gallery.scss
@@ -10,35 +10,26 @@
     justify-content: center;
     margin-right: 0;
     margin-bottom: 0;
-}
 
-.gallery-shadow {
+    &-shadow {
     background: $primary-white-color;
     border: 1px solid #EEEEEE;
-
-    
-}
-
-.gallery-shadow:hover {
+    }
+    &-shadow:hover {
     box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 
     0px 4px 4px rgba(0, 0, 0, 0.06), 
     0px 1px 1px rgba(0, 0, 0, 0.12);
-}
-
-.gallery .item {
+    }
+    & .item {
     width: 370px;
-}
-
-.gallery .item:not(:nth-child(3n)) {
+    }
+    & .item:not(:nth-child(3n)) {
     margin-right: 30px;
-}
-
-.gallery .item.item:not(:nth-last-child(-n + 3)) {
+    }
+    & .item.item:not(:nth-last-child(-n + 3)) {
     margin-bottom: 30px;
-}
-
-                /* h2 */
-.gallery-title {
+    }
+    &-title {
     margin-left: 24px;
     margin-bottom: 4px;
 
@@ -47,10 +38,8 @@
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
-   
-}
-
-.gallery-text {
+    }
+    &-text {
     margin-left: 24px;
     margin-bottom: 20px;
 
@@ -59,23 +48,19 @@
     font-size: 16px;
     line-height: 1.8;
     letter-spacing: 0.03em;
-}
+} }
 
 .product {
     text-decoration: none;
-}
 
-.product:focus {
+    &:focus {
     outline: transparent;
-}
-
-.product-thumb {
+    }
+    &-thumb {
     position: relative;
     
     overflow: hidden;
-}
-
-.product-thumb::before {
+    &::before {
     content: '';
 
     padding-top: 63px;
@@ -95,7 +80,13 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     
     background-color: rgba(33, 149, 243, 0.9);
-}
+    } }
+    &:hover .product-thumb::before {
+    transform: translateY(0);
+    }
+    &:hover .hover-message {
+    transform: translateY(0);
+} }
 
 .hover-message {
     position: absolute;
@@ -125,10 +116,5 @@
     overflow: hidden;
 }
 
-.product:hover .product-thumb::before {
-    transform: translateY(0);
-}
 
-.product:hover .hover-message {
-    transform: translateY(0);
-}
+
