--- a/sass/components/_section-activity.scss
+++ b/sass/components/_section-activity.scss
@@ -1,18 +1,15 @@
-    /* section - activity of the company */
+/* section - activity of the company */
 
 .activity {
      display: flex;
-}
     
-.activity .item:not(:first-child) {
+     .item:not(:first-child) {
     margin-left: 30px;
-}
-    
-.product-activity {
+    }
+    &-product {
     position: relative;
-}
-    
-.activity-text {
+    }
+    &-text {
     position: absolute;
     bottom: 0%;
     left: 0%;
@@ -33,4 +30,9 @@
     
     background: rgba(47, 48, 58, 0.8);
     color: $primary-white-color;
-}
+} }
+    
+
+    
+
+    
