--- a/sass/components/_section-companys.scss
+++ b/sass/components/_section-companys.scss
@@ -3,13 +3,11 @@
 .company {
     display: flex;
     justify-content: space-around;
-}
-        
-.company .item:not(:first-child) {
+
+    .item:not(:first-child) {
     margin-left: 30px;
-}
-        
-.company-link {
+    }
+    &-link {
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -19,21 +17,24 @@
         
     border: 1px solid #AFB1B8;
     border-radius: 4px;
-}
-        
-.company-link .icon-company{
+
+    .icon-company{
     fill: #AFB1B8;
-}
-        
-.company-link:hover,
-.company-link:focus {
+    }
+    &:hover,
+    &:focus {
     border: 1px solid $accent-color;
     border-radius: 4px;
     outline: transparent;
-}
-        
-.company-link:hover,
-.company-link:focus .icon-company {
+    }
+    &:hover,
+    &:focus .icon-company {
     --color3: #2196F3;
     outline: transparent;
-}
+} } }
+        
+
+        
+
+        
+    
