--- a/sass/components/_section-features.scss
+++ b/sass/components/_section-features.scss
@@ -3,26 +3,23 @@
 
 .features {
     display: flex;
-}
-    
-.features .item:not(:first-child) {
+
+    .item:not(:first-child) {
      margin-left: 30px;
-}
-    
-.features .item {
+    }
+    .item {
     width: 270px;
-}
-    
-.features-text {
+    }
+    &-text {
     margin-bottom: 0;
     
     font-weight: normal;
     font-size: 14px;
     line-height: 1.7;
     letter-spacing: 0.03em;
-}
+} }
     
-.icon-features {
+.icon {
     display: flex;
     height: 120px;
     width: 270px;
@@ -32,11 +29,12 @@
     border-radius: 4px;
         
     justify-content: center;
-}
-    
-.icon {
+
+    &-features {
     width: 70px;
     height: 70px;
     margin-top: 25px;
+} }
     
-}
+
+    
