--- a/sass/components/_section-hero.scss
+++ b/sass/components/_section-hero.scss
@@ -4,45 +4,8 @@
 .hero {
     margin-bottom: 94px;
     text-align: center;
-}
-    
-.hero-title {
-    padding-top: 200px;
-    padding-left: 250px;
-    padding-right: 250px;
-    margin-bottom: 30px;
-    
-    color: $primary-white-color;
-    
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
-    letter-spacing: 0.06em;
-    text-align: center;
-    text-transform: uppercase;
-}
-    
-.button {
-    display: inline-block;
-    /* min-width: 200px; */
-    /* margin-bottom: 200px; */
-    padding: 10px 32px 10px 32px;
-    
-    border-radius: 4px;    
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-        
-    color: $primary-white-color;
-    background-color: $accent-color;
-        
-    text-align: center;
-    text-decoration: none;
-}
-    
-.section {
-    margin-bottom: 94px;
-}
-    
-.bg-hero {
+
+    &-background {
     height: 600px;
     max-width: 1600px;
 
@@ -61,5 +24,42 @@
             url('../images/Header.jpg');
     
     background-color: #757575;
-}
+    }
+    &-title {
+    padding-top: 200px;
+    padding-left: 250px;
+    padding-right: 250px;
+    margin-bottom: 30px;
+    
+    color: $primary-white-color;
+    
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    letter-spacing: 0.06em;
+    text-align: center;
+    text-transform: uppercase;
+    }
+    
+    &-button {
+    display: inline-block;
+    /* min-width: 200px; */
+    /* margin-bottom: 200px; */
+    padding: 10px 32px 10px 32px;
+    
+    border-radius: 4px;    
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        
+    color: $primary-white-color;
+    background-color: $accent-color;
+        
+    text-align: center;
+    text-decoration: none;
+} }
+    
+
+    
+
+     
+
     
