--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -1,7 +1,7 @@
 @import"./utils/variables";
 @import"./common/common";
+@import"./common/logo";
 @import"./common/page-header";
-@import"./components/section-command";
 @import"./common/page-footer";
 @import"./components/portfolio-filter";
 @import"./components/portfolio-gallery";
